HRIN-565: Fix filters on IE

--- a/web/themes/custom/hoeringsportal/assets/css/module/_filters.scss
+++ b/web/themes/custom/hoeringsportal/assets/css/module/_filters.scss
@@ -1,6 +1,7 @@
 .filters-toggle-wrapper {
   display: flex;
   flex: 0 0 100%;
+
 }
 
 .filters-toggle {
@@ -34,9 +35,10 @@
 }
 
 .bef-links {
-  display: grid!important;
-  grid-template-columns: repeat(auto-fill, minmax(7rem, 1fr));
-  grid-gap: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-right: -$spacer;
 }
 
 #collapseFilters.collapse:not(.show) {
